--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/vega@6.2.0"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-lite@6.4.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-embed@7.0.2"></script>
+    <script src="vega_lite_vis.js"></script>
+    <link rel="stylesheet" href="styles.css">
+
     <title>Cost of Living In Malaysia</title>
 </head>
 <body>
     <h1>Cost of Living and Expenditure in Malaysia</h1>
+    <p class="subtitle">By Afras Ashraf (33803218)</p>
     <p>Over the past decade, Malaysians have faced steadily increasing living costs.
 From basic groceries to housing and transport, price changes affect every household — but not all regions or income groups experience these changes equally.</p>
     <p>This visualisation explores how prices, inflation patterns, and household affordability differ across Malaysia using data from the Department of Statistics Malaysia (DOSM).</p>
@@ -15,7 +22,45 @@ From basic groceries to housing and transport, price changes affect every househ
     <p>Not all goods and services have risen in price at the same rate.</p>
     <p>This grouped bar chart shows how CPI values for major item groups (such as Food, Housing, and Transport) have changed over recent years.</p>
 
+    <div id="cpi_group"></div>
+
     <p>You can observe that Food and Non-Alcoholic Beverages consistently remain the largest contributor to inflation, followed by Housing, Utilities, and Transport.</p>
-</p>
+
+    <h2>Inflation Trends Over Time</h2>
+    <p>The line chart below shows Malaysia’s CPI trend over time, representing the overall change in the cost of living.</p>
+    <p>Notice the periods where inflation rose sharply — around 2014–2015 (fuel subsidy removals), 2018 (GST to SST transition), and 2022–2023 (global price surges).</p>
+    
+    <div id="cpi_time"></div>
+    <p>This steady upward trajectory reflects how the purchasing power of the Ringgit has gradually weakened over the years.</p>
+
+    <h2>Urban vs Rural Differences</h2>
+    <p>The cost of living gap between urban and rural areas is clearly visible in the CPI data.</p>
+    <p>While rural areas tend to have lower housing and service costs, urban residents face higher prices for transport, rent, and food.</p>
+
+    <p>The first line chart shows how CPI trends differ across strata over time.</p>
+    <p>The radar chart below compares CPI values for key goods (like food, housing, and transport) between urban and rural strata.</p>
+
+    <div id="cpi_time_strata"></div>
+    <div id="cpi_radar"></div>
+    <p>These charts highlight that urban households experience faster price increases, especially in transport and utilities.</p>
+
+    <h2>Affordability Across States</h2>
+    <p>While national CPI shows an overall increase, cost of living pressures vary widely across states.</p>
+    <p>The map below compares average household expenditure and income for each state, showing which regions face higher financial strain.</p>
+    <div id="income"></div>
+    <div id="expense"></div>
+    <p>States like Kuala Lumpur, Selangor, and Penang show higher spending due to urban costs.</p>
+    <p>States such as Kelantan and Perlis show lower expenditures but also lower incomes.</p>
+
+    <h2>Summary and Insights</h2>
+    <p>Malaysia’s overall CPI has steadily increased from 2010 to 2025.</p>
+
+<p>Food, housing, and transport remain the primary cost drivers.</p>
+
+<p>Urban households experience higher inflation rates than rural ones.</p>
+
+<p>Income growth has not kept pace with rising living costs, leading to affordability concerns in major cities.</p>
+
+
 </body>
 </html>
